--- a/questApp/src/main/resources/application.properties
+++ b/questApp/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.hikari.auto-commit=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=55emrekilic@gmail.com
-spring.mail.password=qzjaiabkmcpbsokr
+spring.mail.username=yourmail
+spring.mail.password=qyourpassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
